--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ version: 0.1.3
 homepage: https://github.com/polarby/render
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: ">=3.0.0 <4.0.0"
+ # sdk: '>=2.18.6 <3.0.0'
   flutter: '>=3.7.0-1.4.pre'
 
 dependencies:
